--- a/PJA_Skills_032/Pages/EditMyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/EditMyProfilePage.xaml
@@ -8,13 +8,23 @@
       Loading="EditMyProfilePage_OnLoading"
       mc:Ignorable="d">
 
+    <ScrollViewer>
     <StackPanel Margin="16,26,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+        <Image x:Name="userImage"
+                   Width="200"
+                   Height="200"
+                   HorizontalAlignment="Left"
+                   Source="ms-appx:///Assets/LockScreenLogo.png" />
+        
+        <Button x:Name="btnChangeAvatar" Content="Change avatar" Click="BtnChangeAvatar_OnClick"/>
+        
         <TextBox x:Name="TextBoxFullName"
                  Width="300"
                  Header="Full Name"
                  Text="{x:Bind ViewModel.CurrentUser.Name, Mode=OneWay}"
                  TextWrapping="Wrap" />
+        
 
 
 
@@ -98,5 +108,6 @@
                 Click="ButtonSaveChanges_OnClick"
                 Content="Save changes" />
     </StackPanel>
+    </ScrollViewer>
 </Page>
 
