--- a/PJA_Skills_032/Pages/UserPage.xaml
+++ b/PJA_Skills_032/Pages/UserPage.xaml
@@ -1,13 +1,11 @@
-﻿<Page
-    x:Class="PJA_Skills_032.Pages.UserPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PJA_Skills_032.Pages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Loading="UserPage_OnLoading"
-    
-    mc:Ignorable="d">
+﻿<Page x:Class="PJA_Skills_032.Pages.UserPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:PJA_Skills_032.Pages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      Loading="UserPage_OnLoading"
+      mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="SkillGridViewTemplate">
@@ -16,7 +14,7 @@
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
-  
+
     <ScrollViewer Grid.RowSpan="2" Style="{StaticResource PageScrollViewerStyle}">
 
         <Grid Height="630"
@@ -68,6 +66,7 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
                         Background="#FF3B5998"
+                        Click="FacebookBtn_OnClick"
                         Content="F"
                         Foreground="White" />
                 <Button x:Name="GplusBtn"
@@ -76,6 +75,7 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
                         Background="#FFDD4B39"
+                        Click="GplusBtn_OnClick"
                         Content="G+"
                         Foreground="White" />
                 <Button x:Name="SkypeBtn"
@@ -84,15 +84,16 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
                         Background="#FF12A5F4"
+                        Click="SkypeBtn_OnClick"
                         Content="S"
                         Foreground="White" />
-                <Button x:Name="button_Copy2"
-                        Width="55"
+                <Button x:Name="EmailBtn"
+                        Width="61"
                         Margin="10,6,0,6"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
-                        Background="#FF3B5998"
-                        Content="F"
+                        Background="Gray" Click="EmailBtn_OnClick"
+                        Content="@"
                         Foreground="White" />
             </StackPanel>
             <Image x:Name="userAvatar"
@@ -105,8 +106,7 @@
                         Grid.Row="2"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource ProfileCard}">
-                <TextBlock 
-                           Height="21"
+                <TextBlock Height="21"
                            Margin="9,3,9,0"
                            Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
                            Text="Want to learn:"
@@ -114,9 +114,7 @@
                 <GridView x:Name="GridViewLearn"
                           ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
                           ItemTemplate="{StaticResource SkillGridViewTemplate}"
-                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}">
-
-                </GridView>
+                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}" />
             </StackPanel>
 
             <!--  TEACH  -->
@@ -124,8 +122,7 @@
                         Grid.Row="3"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource ProfileCard}">
-                <TextBlock
-                           Height="21"
+                <TextBlock Height="21"
                            Margin="9,3,9,0"
                            Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
                            Text="Want to teach:"
